services/stern/web/static/css/forums.css
.top {
    margin-bottom: 0;
}

.header-text {
    padding: 10px 0px 6px 0px;
    font-size: 150%;
    font-weight: 100;
    margin-left: 10px;
    margin-bottom: 15px;
    color: #868686;
    white-space: nowrap;
    font-weight: lighter;
    overflow: auto;
}

.forum-home {
    width: 100%;
}

.forum-search-shortcut {
    margin-top: 5px;
    margin-left: 5px;
    padding: 3px 2px;
    text-align: left;
    font-size: 85%;
}

.forum-search-shortcut label {
    margin-right: 3px;
}

.forum-search-shortcut input[type="search"] {
    box-sizing: border-box;
    width: 115px;
    height: 18px;
    padding: 1px 2px;
    vertical-align: middle;
}

.forum-search-shortcut input[type="submit"] {
    margin-left: 3px;
    padding: 1px 6px;
    vertical-align: middle;
}

.forum-shortcuts td {
    vertical-align: middle;
}

.forum-jumpbox {
    margin-top: 5px;
    margin-right: 5px;
    padding: 3px 2px;
    white-space: nowrap;
    text-align: right;
    font-size: 85%;
}

.forum-jumpbox label {
    margin-right: 3px;
}

.forum-select {
    max-width: 250px;
    height: 18px;
    border: 1px solid rgb(185, 197, 236);
    vertical-align: middle;
}

.forum-jumpbox input[type="submit"],
.forum-search-forum-filter input[type="submit"],
.forum-search-user-filter input[type="submit"] {
    margin-left: 3px;
    padding: 1px 6px;
    vertical-align: middle;
}

.forum-home td:hover {
    text-shadow: 1px 1px 8px #afb7ff;
}

.topics-table td:hover {
    text-shadow: 1px 1px 8px #afb7ff;
}

.subforum-table td:hover {
    text-shadow: 1px 1px 8px #afb7ff;
}

.mainforum-head {
    color: #000000;
    padding-top: 10px;
    background-position: 0 10px;
    height: 28px;
    text-indent: 10px;
    background-repeat: no-repeat;
}

.mainforum-head h4 {
    color: #FFFFFF;
    font-size: 120%;
    margin: 0;
    line-height: 35px;
    font-weight: normal;
    border-radius: 5px;
}

.subforum-table {
    width: 100%;
    margin-top: 5px;
}

.subforum-head {
    border-radius: 5px;
    background-color: #edebfa;
    padding: 8px;
    font-size: 115%;
}

.subforum-head a {
    color: #3843a6;
    text-decoration: none;
}

.subforum-head p {
    margin: 1px;
    font-size: 8.2pt;
    display: flex;
}

.subforum-head img {
    margin-bottom: 3px;
    margin-top: 3px;
}

.subforum-stats {
    border-radius: 5px;
    padding: 4px;
    background-color: #e3e1fa;
}

.subforum-topics {
    border-radius: 5px;
    padding: 4px;
    background-color: #e3e1fa;
    font-size: 9pt;
}

.subforum-topiccount {
    font-size: 130%;
}

.subforum-postcount {
    color: #4f5355;
}

.page table {
    font-size: 90%;
}

.topics-table {
    margin-top: 15px;
    border-collapse: separate;
    border-spacing: 1px 2px;
}

.topic-header {
    padding-top: 8px;
    padding-bottom: 2px;
    color: #5d5d5d;
    font-weight: bold;
}

.topic-status-text {
    font-size: 85%;
    color: #868686;
}

.username-colored {
    font-weight: bold;
}

.row-light,
.row-dark {
    font-size: 90%;
}

.row-light td {
    padding: 2px;
    border: 1px solid #e2dffa;
    border-radius: 2px;
    vertical-align: middle;
}

.row-dark td {
    padding: 2px;
    border: 1px solid rgb(206, 215, 250);
    border-radius: 2px;
    vertical-align: middle;
}

.row-light img, .row-dark img {
    vertical-align: middle;
}

.bar {
    margin-top: 5px;
}

.bar td {
    height: 15px;
    color: white;
    padding-left: 2.5px;
    padding-bottom: 2px;
}

.bar a {
    color: white;
    font-size: 90%;
    padding: 2.5px;
}

.post-content-wrapper {
    vertical-align: top;
    width: 82%;
}

.post-content-wrapper:hover .hover-button {
    opacity: 1;
}

.post-spacing {
    background-color: #9a9bdb;
    height: 1px;
    width: 100%;
}

.post-profile {
    display: grid;
    justify-content: center;
    text-align: center;
    width: 160px;
    overflow: hidden;
    overflow-wrap: anywhere;
    padding-top: 8px;
    padding-bottom: 8px;
    border-radius: 5px;
}

.post-username {
    font-size: 125%;
}

.post-profile > div {
    padding: 3px;
}

.post-avatar {
    width: 130px;
    height: 130px;
    margin: 5px auto;
}

.post-avatar img {
    width: 128px;
    height: 128px;
}

.post-user-title {
    text-align: center;
    font-size: 80%;
}

.post-user-stats {
    font-size: 80%;
}

.post-profile .flag {
    margin-top: 8px;
}

.beatmapset-link-info {
    text-align: center;
    font-size: 80%;
    color: grey;
    padding-top: 2px;
}

.groups {
    margin-top: 6px;
    display: flex;
    flex-wrap: wrap;
    gap: 4px;
    justify-content: center;
}

.group {
    background: #fff9;
    padding: 1px 3px;
    font-size: 65%;
    font-weight: bold;
}

.group:hover,
.group:focus {
    background: #fff;
    text-decoration: none;
}

.group:active {
    text-decoration: none;
}

.post-time {
    text-align: right;
    margin: 5px;
}

.post-time a {
    color: #5a5a5a;
    font-size: 90%;
}

.post-content {
    overflow: auto;
    overflow-wrap: break-word;
    min-height: 200px;
    padding: 5px;
}

.post-signature {
    vertical-align: bottom;
    border-top: dashed 1px #bcb8e1;
    background-color: #e5e1ff;
    min-height: 30px;
    max-height: 150px;
    padding: 4px 4px 0px 4px;
    overflow: auto;
    display: inline-block;
    width: 98.6%;
}

.hover-button {
    opacity: 0;
    transition: opacity 0.1s;
}

.post-subject {
    font-size: 110%;
    margin-bottom: 15px;
}

.post-subject input {
    width: 60%;
    border-color: gray;
    border-width: 1px;
}

.icon-selection {
    width: 100%;
    text-align: center;
    margin-bottom: 15px;
    overflow: hidden;
    overflow-wrap: break-word;
}

.icon-selection label {
    margin-right: 6px;
    vertical-align: middle;
}

.kudosu-box {
    margin-bottom: 16px;
    background-color: #f0f5ff;
    border-style: solid;
    border-color: #d2d4fa;
    border-radius: 5px 5px 5px 5px;
    border-width: 0.5px;
    font-size: 85%;
    padding: 2.5px;
    margin: 5px;
    text-align: center;
}

.quick-reply textarea {
    background-color: #f0ecfa;
    border: none;
    white-space: pre-line;
    resize: vertical;
    height: 15px;
    max-height: 200px;
    margin: 3px 3px 0px 3px;
    padding: 3px;
    width: 97.5%;
    font-size: 80% !important;
}

.quick-reply {
    justify-content: center;
    display: flex;
    margin-bottom: 6px;
}

.forum-active-users {
    font-size: 80%;
    margin-bottom: 10px;
    margin-left: 5px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.forum-search-header {
    display: inline;
    max-height: 25px;
    vertical-align: middle;
}

.forum-search-page .header-text {
    margin-bottom: 10px;
    float: left;
}

.forum-search-form {
    margin: 0 10px 4px 0;
    padding-top: 8px;
}

.forum-search-form input[type="search"] {
    box-sizing: border-box;
    width: 68%;
    margin-left: 15px;
    padding: 5px;
    border-color: rgb(185, 197, 236);
    border-style: ridge;
    border-width: 1.5px;
    border-radius: 5px;
    font-size: 95%;
    vertical-align: middle;
}

.forum-search-form input[type="submit"] {
    min-width: 75px;
    padding: 5px 8px;
    border-color: rgb(185, 197, 236);
    border-width: 1.5px;
    border-radius: 5px;
    font-size: 95%;
    vertical-align: middle;
    transition: all 0.2s;
}

.forum-search-form input[type="submit"]:hover {
    text-shadow: 1px 1px 8px #afb7ff;
    color: white;
}

.forum-search-user-filter {
    white-space: nowrap;
}

.forum-search-user-filter input[type="text"] {
    box-sizing: border-box;
    width: 200px;
    height: 18px;
    padding: 1px 2px;
    border: 1px solid rgb(185, 197, 236);
    border-radius: 3px;
    vertical-align: middle;
}

.forum-search-options {
    clear: both;
    margin-bottom: 5px;
    font-size: 78%;
}

.forum-search-forum-filter,
.forum-search-user-filter {
    margin: 0;
}

.forum-search-options dl {
    box-sizing: border-box;
    width: 100%;
    min-height: 30px;
    padding: 8px 0 3px;
    border-bottom: 1px dotted #a9a9ff;
}

.forum-search-options dt {
    float: left;
    width: 110px;
    padding-right: 10px;
    text-align: right;
    font-weight: bold;
}

.forum-search-options a {
    margin-right: 4px;
    padding: 3px;
    color: #3843a6;
    text-decoration: none;
}

.forum-search-options a:hover,
.forum-search-options a.selected {
    margin: 2px;
    border-radius: 2px;
    background-color: #a9a9ff;
    color: white;
}

.forum-search-order {
    width: 100%;
    margin: 10px auto 5px;
    border-radius: 5px;
}

.forum-search-order a {
    font-size: 95%;
}

.forum-search-order th {
    padding: 2px 10px;
    border-bottom: 1px solid #a79ef3;
    background-color: #d7d2fb;
}

.forum-search-order img {
    display: inline;
    padding-top: 1px;
    vertical-align: top;
    opacity: 0.7;
}

.forum-search-results {
    margin-top: 5px;
}

.forum-search-content {
    width: 65%;
    padding: 5px !important;
}

.forum-search-title {
    font-size: 105%;
}

.forum-search-excerpt {
    margin-top: 2px;
    color: #4f5355;
    font-size: 85%;
    line-height: 1.25;
    overflow-wrap: break-word;
}

.topic-forum-name {
    margin-top: 1px;
    color: #868686;
    font-size: 78%;
}

.forum-search-empty {
    margin: 20px 10px;
    text-align: center;
    color: #686868;
    font-size: 90%;
}

.forum-search-page .pagination {
    margin-right: 10px;
    margin-left: 10px;
}

